fix sidebar collapse icon

--- a/src/defaultContent/styles/hero.css
+++ b/src/defaultContent/styles/hero.css
@@ -3,7 +3,7 @@
 }
 
 .hero-content {
-  border-radius: o.75rem;
+  border-radius: 0.75rem;
   padding: 4rem 3rem;
 }
 
