--- a/src/defaultContent/styles/main.css
+++ b/src/defaultContent/styles/main.css
@@ -32,6 +32,7 @@
   --primary-light-color: #407893;
   --primary-dark-color: #1c4662;
   --primary-darkest-color: #12364E;
+  --primary-btn-color: #2b719f;
   /* secondary colors */
   --secondary-main-color: #5dc7b1;
   --secondary-light-color: #eef3f2;
@@ -94,12 +95,12 @@ html {
 
 .common-btn-primary {
   display: inline-block;
-  background-color: var(--primary-dark-color);
+  background-color: var(--primary-btn-color);
   color: var(--lightest-text-color);
   font-size: 0.875rem;
   padding: 0.625rem 1.25rem;
   border: none;
-  border-radius: 1.875rem;
+  border-radius: 0.5rem;
   text-decoration: none;
   cursor: pointer;
   text-align: center;
@@ -107,11 +108,6 @@ html {
   box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
   transition: 0.3s;
 }
-
-.common-btn-primary:hover {
-  background-color: red;
-}
-
 .common-btn-primary[disabled],
 .common-btn-primary.disabled {
   background-color: var(--primary-dark-color);
@@ -148,7 +144,7 @@ html {
 }
 
 .common-btn-primary:hover {
-  background-color: var(--primary-main-color);
+  background-color: var(--primary-dark-color);
   color: var(--lightest-text-color);
 }
 
@@ -220,7 +216,7 @@ html {
   font-size: 0.875rem;
   padding: 0.625rem 1.25rem;
   border: 0.0625rem solid var(--primary-main-color);
-  border-radius: 3.125rem;
+  border-radius: 0.5rem;
   text-decoration: none;
   cursor: pointer;
   text-align: center;
