--- a/src/defaultContent/styles/side-bar.css
+++ b/src/defaultContent/styles/side-bar.css
@@ -101,12 +101,20 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    padding: 0.75rem;
+    padding: 1rem;
     background: none;
     border: none;
+    margin:0 0.3125rem;
     color: var(--sidebar-link-color);
     cursor: pointer;
     transition: color 0.2s;
+}
+
+.collapse-btn i {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
 }
 
 .collapse-btn:hover {
@@ -127,6 +135,7 @@
     white-space: nowrap;
     opacity: 1;
     transition: opacity 0.2s;
+    overflow: hidden;
 }
 
 .collapsed .collapse-text {
